# hatrace

./: .gitignore  .gitmodules  Adding-new-syscalls.md  LICENSE  Makefile  README.md  cabal.project  hatrace.cabal  hatrace.sublime-project  ops  root  shell.nix  stack.yaml  version
.circleci/: config.yml
app/: Main.hs
cbits/: fork-exec-ptrace.c  resolve-fd-name.c
example-programs/: Hello.hs  access-itself.c  atomic-write.c  bad-open-pointer.c  bad-read-pointer.c  brk-syscall.c  change-write-result.c  chdir.c  connect.c  dup3.c  execve-linux-null-envp.c  execve.c  exit.c  expect-errno-in-write.c  flock.c  ftruncate-gnu.c  get-fs.c  getcwd.c  hello  hello-linux-i386.asm  hello-linux-x86_64.asm  inherited-flocks.c  iovec.c  kill.c  madvise.c  mkdir.c  mmap-syscall.c  mprotect.c  poll.c  ppoll.c  pwd.c  rmdir.c  sched_yield.c  segfault.asm  set-tid-address.c  sockets.c  symlinkat.c  sysinfo-loads.c  trigger-time.c  truncate-gnu.c  (+5 more)
src/: HaTrace.hs
src/HaTrace/: SyscallTables.hs
src/HaTrace/SyscallTables/: Generated.hs
src/System/: Hatrace.hs
src/System/Hatrace/: FdNames.hsc  Format.hs  Main.hs  SignalMap.hs  Signals.hs  SyscallTables.hs  Tools.hs  Types.hsc
src/System/Hatrace/SyscallTables/: Generated.hs  Util.hs
src/System/Hatrace/Types/: Internal.hs  TH.hs
test/: HaTraceSpec.hs  HatraceSpec.hs  Spec.hs
