name:                hatrace
version:             0.1.0.0
synopsis:            strace as a library; inspect and intercept system calls
description:         Gives programmatic access to recording, analysing and intercepting
                     a given program's system calls, signals, and memory contents.
homepage:            https://gitlab.com/Norfair/hatrace#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove, Niklas Hambüchen
maintainer:          syd.kerckhove@gmail.com
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove, Niklas Hambüchen
category:            System
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  Makefile
  stack.yaml
  example-programs/*.asm
  -- Cabal cannot currently include them with a wildcard,
  -- see https://github.com/haskell/cabal/issues/5883,
  -- so we must currently enumerate them manually.
  syscalls-table/tables/syscalls-x86_64
  syscalls-table/tables/syscalls-i386

library
  hs-source-dirs:      src
  c-sources:           cbits/fork-exec-ptrace.c
  exposed-modules:     System.Hatrace
                       System.Hatrace.SyscallTables
                       System.Hatrace.SyscallTables.Generated
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , containers
                     , directory
                     , linux-ptrace
                     , posix-waitpid
                     , process
                     , template-haskell
                     , text
                     , unix
                     , unliftio
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite hatrace-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HatraceSpec
  build-depends:       base
                     , conduit
                     , containers
                     , hatrace
                     , hspec
                     , process
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/Norfair/hatrace
