name:                hatrace
version:             0.1.0.0
synopsis:            strace as a library; inspect and intercept system calls
description:         Gives programmatic access to recording, analysing and intercepting
                     a given program's system calls, signals, and memory contents.
homepage:            https://github.com/nh2/hatrace#readme
license:             MIT
license-file:        LICENSE
author:              Niklas Hambüchen <mail@nh2.me>, Tom Sydney Kerckhove <syd.kerckhove@gmail.com>
maintainer:          Niklas Hambüchen <mail@nh2.me>
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove, 2019 Niklas Hambüchen
category:            System
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  Makefile
  stack.yaml
  example-programs/*.asm
  -- Cabal cannot currently include them with a wildcard,
  -- see https://github.com/haskell/cabal/issues/5883,
  -- so we must currently enumerate them manually.
  syscalls-table/tables/syscalls-x86_64
  syscalls-table/tables/syscalls-i386

library
  hs-source-dirs:      src
  c-sources:           cbits/fork-exec-ptrace.c
  exposed-modules:     System.Hatrace
                       System.Hatrace.Main
                       System.Hatrace.SyscallTables
                       System.Hatrace.SyscallTables.Generated
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , containers
                     , directory
                     , linux-ptrace
                     , optparse-applicative
                     , posix-waitpid
                     , process
                     , template-haskell
                     , text
                     , unix
                     , unliftio
                     , unliftio-core
  ghc-options:         -Wall
  default-language:    Haskell2010

executable hatrace
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , hatrace
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite hatrace-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HatraceSpec
  build-depends:       base
                     , bytestring
                     , conduit
                     , containers
                     , directory
                     , filepath
                     , hatrace
                     , hspec
                     , process
                     , unix
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nh2/hatrace
